--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "netlify": "netlify dev"
   },
   "dependencies": {
     "@astrojs/netlify": "^5.5.4",
-    "astro": "^4.16.8"
+    "@astrojs/tailwind": "^5.1.2",
+    "astro": "^4.16.8",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "^3.4.14",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
